# goldsrc-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: tool-doesn-t-work-on-some-engine-builds-mods.md
.github/workflows/: cmake.yml  nightly-builds.yml
cmake/: CMakeLists.txt  CMakeSettings.json  CompilerRuntime.cmake  SupportWinXP.cmake  VcpkgIntegrate.cmake  msvc_winxp_support.cmake
cmake/loader/: CMakeLists.txt
msvc/: goldsrc-monitor.sln  goldsrc-monitor.vcxproj  goldsrc-monitor.vcxproj.filters
msvc/loader/: loader.rc  loader.vcxproj  loader.vcxproj.filters  resource.h
resources/: build_info.json  gsm_config.cfg  readme.txt  start_for_cof.cmd  start_game_with_gsm.bat
resources/program_dir/: build_info.json  gsm_config.cfg  start_for_bdef.cmd  start_for_svencoop.cmd  start_for_xash3d.cmd
sources/: app_info.h  app_version.h  color.h  exception.cpp  exception.h  module_info.cpp  module_info.h  moduleinfo.h  string_stack.cpp  string_stack.h  sys_utils.cpp  sys_utils.h
sources/loader/: CMakeLists.txt  application.cpp  application.h  inject_strategy.h  loader.rc  main.cpp  resource.h  util.cpp  util.h  utils.cpp  utils.h  win32_inject_strategy.cpp  win32_inject_strategy.h
vcpkg/overlay_ports/hlsdk/: portfile.cmake  vcpkg.json
